--- a/Simulating_thermal_qubits.ipynb
+++ b/Simulating_thermal_qubits.ipynb
@@ -186,7 +186,7 @@
    "id": "a5cc5260",
    "metadata": {},
    "source": [
-    "The TFD-double sates for the teleport circuit between the non-thermal and thermal qubit for $\theta=0.705027$, $\\beta\\approx 2$, is "
+    "The TFD-double sates for the teleport circuit between the non-thermal and thermal qubit for $\\theta=0.705027$, $\\beta\\approx 2$, is "
    ]
   },
   {
