--- a/Simulating_thermal_qubits.ipynb
+++ b/Simulating_thermal_qubits.ipynb
@@ -117,8 +117,8 @@
     "# Initialize a quantum circuit with one qubit\n",
     "qc = QuantumCircuit(qubits_count)\n",
     "\n",
-    "# Add a parametrized RX rotation on the qubit\n",
-    "qc.rx(theta,0)\n",
+    "# Add a parametrized RY rotation on the qubit\n",
+    "qc.ry(theta,0)\n",
     "qc.cx(0,1)\n",
     "qc.draw(output='mpl')\n",
     "#print(qc)"
